mobile vers is completed

--- a/css/chats.css
+++ b/css/chats.css
@@ -58,7 +58,7 @@
     display: flex;
     gap: 0.625rem;
     flex-direction: column-reverse;
-    height: calc(100% - 8.2rem - 10.4rem);
+    height: calc(100% - 8.2rem - 8.8rem);
     scroll-behavior: smooth;
     overflow-y: scroll;
     scrollbar-width: none;
@@ -178,6 +178,10 @@
     font-size: var(--font-size-3);
     color: var(--main-text-color);
     transition: 0.2s;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 30rem;
 }
 
 .chat__user-names.trust {
@@ -383,6 +387,11 @@
     transition: 0.2s;
 }
 
+.message-image-icon.disabled {
+    opacity: 50%;
+    pointer-events: none;
+}
+
 .message-image-icon:hover {
     background-color: var(--block-accent-color-06);
 }
@@ -584,4 +593,43 @@
 
 .recent-main-name.trust {
     color: var(--main-accent-color);
+}
+
+@media (max-width: 820px) {
+    .chat-with-user {
+        height: calc(100vh - 2.6rem - 2.6rem - 7.2rem);
+    }
+
+    #success-load-chat {
+        height: calc(100% - 8.2rem - 8.8rem);
+    }
+
+    .chat__new-message {
+        bottom: 1rem;
+    }
+
+    .chat__user-back {
+        font-size: var(--font-size-1);
+    }
+}
+
+@media (max-width: 720px) {
+    .user-name-and-status .status {
+        top: calc(3.3rem + 1.6rem);
+        left: calc(3.4rem + 2.6rem);
+        min-height: 19px;
+        max-height: 19px;
+        min-width: 19px;
+        max-width: 19px;
+    }
+
+    .chat__user-names {
+        max-width: 20rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .chat__user-names {
+        max-width: 15rem;
+    }
 }
