--- a/css/main.css
+++ b/css/main.css
@@ -149,18 +149,21 @@ header {
 header .phone-link {
     display: flex;
     gap: 1rem;
-    align-items: end;
+    align-items: center;
+    line-height: 1;
     font-family: 'Unbounded';
     font-weight: 900;
     color: var(--main-text-color);
-    font-size: 2.4rem;
+    font-size: var(--font-size-3);
 }
 
 header .phone-link img {
     border-radius: 0;
     margin: 0;
-    width: 3rem;
-    height: 3rem;
+    min-width: 30px;
+    max-width: 30px;
+    min-height: 30px;
+    max-height: 30px;
 }
 
 header img {
@@ -1133,7 +1136,6 @@ input.auth-and-reg::placeholder {
     margin: 0;
     display: flex;
     align-items: center;
-    gap: 1rem;
     justify-content: space-around;
     background-color: var(--block-color);
     box-shadow: var(--shadow-small);
@@ -1147,7 +1149,19 @@ input.auth-and-reg::placeholder {
 
 .first-part-mobile li {
     width: 100%;
+    min-width: fit-content;
     overflow: hidden;
+    flex-shrink: 1;
+}
+
+.first-part-mobile li#active {
+    flex-shrink: 1;
+}
+
+
+.first-part-mobile #active a {
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 .first-part-mobile li a {
@@ -1156,8 +1170,7 @@ input.auth-and-reg::placeholder {
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    padding: 1rem 1.6rem;
-    min-width: 100%;
+    padding: 1rem 0;
     transition: 0.2s;
 }
 
@@ -1252,9 +1265,6 @@ input.auth-and-reg::placeholder {
 }
 
 @media (max-width: 920px) {
-    main {
-        padding: 0 5rem;
-    }
 
     .auth__section img {
         display: none;
@@ -1263,11 +1273,6 @@ input.auth-and-reg::placeholder {
     .auth__section>.div-line,
     .reg__section .div-line {
         display: none;
-    }
-
-    .reg__form>div {
-        flex-direction: column;
-        gap: 0;
     }
 
     .reg__input-div {
@@ -1281,14 +1286,12 @@ input.auth-and-reg::placeholder {
     .reg__input-div a.desktop {
         display: none;
     }
-
-    .reg__form button {
-        margin-top: 2.8rem;
-    }
 }
 
 @media (max-width: 820px) {
-    header .phone-link span {
+
+    .auth__buttons span,
+    .reg__buttons span {
         display: none;
     }
 }
@@ -1304,35 +1307,22 @@ input.auth-and-reg::placeholder {
         min-height: 0;
     }
 
-    .auth__form button {
-        margin-top: 2.8rem;
-    }
-
-    .auth__section,
-    .reg__section {
-        padding: 2.6rem;
-    }
-
     header div a {
         display: none;
     }
 
-    .post-buttons {
-        margin: 2.6rem 0 1.6rem;
+    header .phone-link span {
+        font-size: 1.8rem;
     }
 }
 
 @media (max-width: 480px) {
-    main {
-        padding: 0 1.6rem;
-    }
-
     header {
         padding: 2.1rem 1.6rem;
     }
 
     .wrapper {
-        max-width: calc(100% - 3.2rem);
+        max-width: calc(100% - 1.6rem);
     }
 
     footer {
