--- a/css/people.css
+++ b/css/people.css
@@ -753,6 +753,7 @@
     box-shadow: var(--shadow-small);
     padding: 1rem 1.6rem;
     border-radius: 2rem;
+    flex-basis: 25%;
 }
 
 .only-user-info {
@@ -775,6 +776,10 @@
     color: var(--main-text-color);
     font-weight: 600;
     cursor: pointer;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 15rem;
 }
 
 .request-from-user .user-info p {
@@ -1049,6 +1054,10 @@
         max-height: 19px;
         min-width: 19px;
         max-width: 19px;
+    }
+
+    .request-from-user {
+        flex-grow: 1;
     }
 }
 
