--- a/css/wall.css
+++ b/css/wall.css
@@ -688,7 +688,7 @@ div.for-friends svg {
     max-width: calc(100vw - 25rem*2 - 10rem - 2.6rem*2 - 2.6rem*2 - 50px - 1.6rem*2 - 28px - 15rem - 1.6rem);
 }
 
-.user-post .first-and-second-names.rampus {
+.user-post .first-and-second-names.trust {
     display: flex;
     align-items: center;
     gap: 0.5rem;
