--- a/css/trophy.css
+++ b/css/trophy.css
@@ -131,7 +131,7 @@
     font-size: var(--font-size-2);
     text-overflow: ellipsis;
     white-space: nowrap;
-    overflow: hidden;
+    overflow-x: hidden;
     display: block;
     width: min-content;
     max-width: 13rem;
