--- a/css/main.css
+++ b/css/main.css
@@ -1186,14 +1186,13 @@ input.auth-and-reg::placeholder {
 
 .menu__link-profile {
     display: flex;
-    background-color: var(--block-color);
     border-radius: 50%;
     transition: 0.2s;
     box-shadow: var(--shadow-small);
+    /* padding: 0.39rem; */
 }
 
 .menu__link-profile .menu-avatar {
-    padding: 0.625rem;
     min-height: calc(6.155rem);
     min-width: calc(6.155rem);
     max-width: calc(6.155rem);
@@ -1204,8 +1203,12 @@ input.auth-and-reg::placeholder {
     transition: 0.2s;
 }
 
-.menu__link-profile:hover {
-    background-color: var(--block-accent-color-06);
+.menu__link-profile:hover .menu-avatar {
+    border: 0.39rem solid var(--block-accent-color-06);
+}
+
+.menu__link-profile:focus .menu-avatar {
+    border: 0.39rem solid var(--block-accent-color-06);
 }
 
 .request-buttons {
